update sample to work with haproxy ingest

--- a/rust/bar-app/Cargo.toml
+++ b/rust/bar-app/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "hello-actix"
-version = "0.2.0"
+name = "bar-app"
+version = "0.1.0"
 authors = ["Michael Greenly <mgreenly@gmail.com>"]
 edition = "2018"
 
@@ -8,3 +8,5 @@ edition = "2018"
 
 [dependencies]
 actix-web = "1.0"
+log = "0.4.8"
+env_logger = "0.7.0"
