--- a/rust/k8s/app-foo.yaml
+++ b/rust/k8s/app-foo.yaml
@@ -4,21 +4,21 @@ kind: Deployment
 metadata:
   namespace: default
   labels:
-    run: foo-app
-  name: foo-app
+    run: foo
+  name: foo
 spec:
   replicas: 2
   selector:
     matchLabels:
-      run: foo-app
+      run: foo
   template:
     metadata:
       labels:
-        run: foo-app
+        run: foo
     spec:
       containers:
-      - name: foo-app
-        image: mgreenly/foo-app:v0.1.0
+      - name: foo
+        image: mgreenly/foo:v0.2.0
         ports:
         - containerPort: 8088
 
@@ -28,15 +28,15 @@ kind: Service
 metadata:
   namespace: default
   labels:
-    run: foo-app
-  name: foo-app
+    run: foo
+  name: foo
   annotations:
     haproxy.org/check: "enabled"
     haproxy.org/forwarded-for: "enabled"
     haproxy.org/load-balance: "leastconn"
 spec:
   selector:
-    run: foo-app
+    run: foo
   ports:
   - name: port-1
     port: 80
