--- a/rust/k8s/ingress.yaml
+++ b/rust/k8s/ingress.yaml
@@ -11,20 +11,20 @@ spec:
       paths:
       - path: /foo
         backend:
-          serviceName: foo-app
+          serviceName: foo
           servicePort: 80
       - path: /bar
         backend:
-          serviceName: bar-app
+          serviceName: bar
           servicePort: 80
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: haproxy-configmap
-  namespace: default
-data:
-  servers-increment: "42"
-  ssl-redirect: "OFF"
-  timeout-connect: "10s"
+# ---
+# apiVersion: v1
+# kind: ConfigMap
+# metadata:
+#   name: haproxy-configmap
+#   namespace: default
+# data:
+#   servers-increment: "42"
+#   ssl-redirect: "OFF"
+#   timeout-connect: "10s"
 
