--- a/rust/proxy/haproxy.cfg
+++ b/rust/proxy/haproxy.cfg
@@ -8,14 +8,17 @@ defaults
   timeout server 50000ms
 
 backend www
-  server www_server 10.0.7.179:80
+  server www_server 10.55.252.125:80
 
 backend foo
-  server www_server 10.0.0.243:80
+  server www_server 10.55.247.143:80
 
 frontend http
   bind 0.0.0.0:80
-  default_backend www
 
-  acl url_foo path_beg /foo
-  use_backend foo if url_foo
+  acl is_http hdr(X-Forwarded-Proto) http
+  acl is_foo path_beg /foo
+
+  redirect scheme https code 301 if is_http
+  use_backend foo if is_foo
+  default_backend www
